@@ -1463,9 +1463,9 @@ a raw resource, or the name of an herb type</td>
 item holds</td>
 </tr>
 <tr>
-<td>Maximum Range</td>
-<td><em></em>Max</td>
-<td>maximum range of
+<td>Min Max Range</td>
+<td><em></em>Rng</td>
+<td>min,max range of
 the weapon</td>
 </tr>
 <tr>
