@@ -5492,7 +5492,7 @@ ITEM_BASE_VALUE, ITEM_NAME, AMOUNT_MATERIAL_REQUIRED, N_A,
 POSE_DESCRIPTION, RESOURCE_NAME, ATTACK_MODIFICATION, STATUE,
 WEAPON_CLASS, LIQUID_CAPACITY, OPTIONAL_RACE_ID, RESOURCE_OR_MATERIAL,
 CODED_WEAR_LOCATION, CONTAINER_TYPE, INSTRUMENT_TYPE,
-CLAN_ITEM_CODENUMBER, MAXIMUM_RANGE, RESOURCE_OR_KEYWORD, LID_LOCK,
+CLAN_ITEM_CODENUMBER, MIN_MAX_RANGE, RESOURCE_OR_KEYWORD, LID_LOCK,
 OPTIONAL_AMOUNT_REQUIRED, SMELL_LIST, LIGHT_DURATION, READABLE_TEXT,
 CODED_SPELL_LIST, BUILD_TIME_TICKS, POSE_NAME, METAL_OR_WOOD,
 RESOURCE_NAME_AMOUNT_MATERIAL_REQUIRED, CLAN_EXPERIENCE_COST_AMOUNT,
