@@ -18,6 +18,8 @@
  16. New achievement flag: REMORT, for forcing remorting players to re-acquire player achivements.
  17. Alchemy now supports powders/dusts
  18. New prayer: sense chants
+ 19. Weaponsmith/Fletching now supports min range data
+ 
   
 # Build 5.9.11.1 Release 02/26/2021
   Bug Fix Release:
